# ShortCircuit

./: .gitignore  CMakeLists.txt  Common.h  Database.cpp  Database.h  Equipment.h  Generator.cpp  Generator.h  Grid.cpp  Grid.h  IEEE300.sql  ShortCircuit.cpp  ShortCircuit.sln  ShortCircuit.vcxproj  ShortCircuit.vcxproj.filters  ThreadPool.hpp  Transformer.cpp  Transformer.h  readMySQL.cpp  readMySQL.h
.VSCodeCounter/2021-04-26_10-10-10/: results.md
DataSet/25000/: gencost.csv  generator.sql
DataSet/500/: branch.csv  branch.sql  bus.csv  bus.sql  gen.csv  generator.sql
DataSet/rawData/25000/: branch.csv  bus.csv  gen.csv
DataSet/rawData/500/: gencost.csv
case/: IEEE.sql  IEEE14.sql  MatPower.sql
include/: Grid.h  ThreadPool.hpp  readMySQL.h
source/: Common.h  Database.cpp  Database.h  Grid.cpp  Grid.h  ShortCircuit.cpp  main.cpp  readMySQL.cpp
